	1 fail from 395 tests;

	* stldbg-shared: passed 395 tests;

	* Platform tested: gcc 4.2.1, i686 GNU/Linux, glibc 2.4;

	* release-shared: passed 395 tests;

	* stldbg-shared: passed 395 tests;

	* Platform tested: gcc 4.1.1, i686 athlon-4 i386 GNU/Linux,
	glibc 2.3.6;

	* release-shared: passed 395 tests;

	* stldbg-shared: passed 395 tests;

2007-09-27  Francois Dumont  <dums@users.sourceforge.net>

	* src/facets_byname.cpp: In collate::do_transform, consider
	low == high as a special case, returns empty string in this
	case.

2007-09-27  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* test/unit/find_test.cpp: array initialization missed.

2007-09-17  Francois Dumont  <dums@users.sourceforge.net>

	* stlport/stl/_num_get.h: Add _STLP_DECLSPEC specification to
	several functions that might be access by external code when
	num_get facet is instantiated with something else than the
	Standard required instantiation.

2007-09-11  Francois Dumont  <dums@users.sourceforge.net>

	* src/c_locale_glibc/c_locale_glibc.c, c_locale_glibc2.c: Fix
	_Locale_strxfrm and _Locale_wcxfrm implementation to take
	into account strings that are not zero terminated.

	* test/unit/locale_test.cpp: Add check that collate.tranform
	method build a key only for chars in the range pass to method.

2007-09-10  Francois Dumont  <dums@users.sourceforge.net>

	* src/facets_byname.cpp: John Maddock bug report 1788618 fix.
	Moreover remove use of an intermediate buffer to get result
	of _Locale_strxfrm.

	* test/unit/locale_test.cpp: Add tests for collate::transform
	facet method.

	* src/c_locale_win32/c_locale_win32.c: Small modification,
	_Locale_strxfrm is supposed to return the number of chars
	required to store the generated sorted key without the trailing
	zero.

	* src/c_locale_glibc/c_locale_glibc.c, c_locale_glibc2.c: Fix
	implementation of _Locale_strxfrm, it should never return -1.

2007-09-10  Petr Ovtchenkov  <complement@users.sourceforge.net>
