@@ -30,6 +30,9 @@
 
 	* stldbg-shared: passed 395 tests;
 
+	* src/c_locale_glibc/c_locale_glibc2.c: this is a C, so
+	decl allowd only on top of block;
+
 2007-09-27  Francois Dumont  <dums@users.sourceforge.net>
 
 	* src/facets_byname.cpp: In collate::do_transform, consider
